Use URI#toURL